FIX 169862 no wrap on sub-form numbers

--- a/skins/default/output-value.scss
+++ b/skins/default/output-value.scss
@@ -36,6 +36,7 @@ article ol.properties {
 							input.float,
 							input.integer {
 								text-align: right;
+								white-space: nowrap;
 							}
 
 							textarea {
